--- a/20 - Speech Detection/index.html
+++ b/20 - Speech Detection/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="words" contenteditable>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
