--- a/16 - Mouse Move Shadow/index.html
+++ b/16 - Mouse Move Shadow/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="hero">
+        <h1 contenteditable>🔥WOAH!</h1>
+      </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
