--- a/28 - Video Speed Controller/index.html
+++ b/28 - Video Speed Controller/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+
+  <div class="wrapper">
+    <video class="flex" width="765" height="430" src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" loop controls></video>
+    <div class="speed">
+      <div class="speed-bar">1×</div>
+    </div>
+  </div>
     <script src="script.js"></script>
 </body>
 </html>
